# n-body-simulator

./: .gitignore  CMakeLists.txt  compute.cpp  flake.nix
src/: compute.cpp
